	PR tree-optimization/19876 	Partially revert my change from 2005-01-14 	* tree-ssa-pre.c (compute_antic_aux): Make recursive once again... 	(compute_antic): ...and remove the loop here.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@94896 138bc75d-0d04-0410-961f-82ee72b054a4